# tracker

./: .gitignore  README.md  pyproject.toml
.specify/: constitution.md  plan.md  spec.md  tasks.md
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
tests/: conftest.py  test_badge_repo.py  test_cli.py  test_db.py  test_gamification.py  test_habit_repo.py  test_habit_service.py  test_log_repo.py  test_models.py  test_player_repo.py  test_streak_service.py
tracker/: __init__.py  cli.py  db.py  display.py
tracker/models/: badge.py  habit.py  log.py  player.py
tracker/repository/: badges.py  habits.py  logs.py  player.py
tracker/services/: gamification.py  habit_service.py  streak_service.py
